src/styles/landing_page.module.css
.header {
  max-width: min(70rem, 90vw);
  margin: 0 auto;
  display: grid;
  gap: 1rem;
  grid-template-rows:
    calc(100vh * 2.5 / 14) calc(100vh * 2 / 14) calc(100vh * 4 / 14)
    calc(100vh * 2 / 14) calc(100vh * 3.5 / 14);
  place-items: center;
}

.HACKATHON {
  max-width: min(60rem, 90vw);
  grid-row-start: 2;
}

.BITEhack_logo {
  width: clamp(10rem, 80%, 30rem);
  grid-row-start: 3;
}

.header_button_container {
  grid-row-start: 4;
  text-align: center;
}

.header_button {
  color: #e97039;
  font-family: 'Montserrat', Verdana;
  font-weight: 800;
  font-size: clamp(1rem, 8vw, 3rem);
  text-align: center;
  display: inline-block;

  cursor: pointer;
  user-select: none;
  padding-inline: clamp(0.25rem, 2vw, 0.625rem);

  transition: all 0.4s ease;
  position: relative;
}
.header_button:hover {
  transform: scale(1.2);
}

.header_button::before {
  content: '';
  position: absolute;
  right: 100%;
  top: 15%;
  height: 70%;
  width: 32%;
  background-image: linear-gradient(
    #e97039 29%,
    transparent 29% 36%,
    #e97039 36% 64%,
    transparent 64% 71%,
    #e97039 71%
  );
}

.header_button::after {
  content: '';
  position: absolute;
  left: 100%;
  top: 15%;
  height: 70%;
  width: 32%;
  background-image: linear-gradient(
    #e97039 29%,
    transparent 29% 36%,
    #e97039 36% 64%,
    transparent 64% 71%,
    #e97039 71%
  );
}

img {
  max-width: 100%;
}

@media (min-width: 54rem) {
  .header {
    grid-template-rows:
      calc(100vh * 5 / 32) calc(100vh * 8 / 32) calc(100vh * 9 / 32)
      calc(100vh * 5 / 32) calc(100vh * 5 / 32);
  }
}

